k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: order-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: bogdansolga/order-service:0.0.1-2025-07-21-78127b1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 750m
              memory: 512M
            limits:
              cpu: 750m
              memory: 512M
