k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
